Actualización Mini manual Git 2

--- a/Mini manual GitHub/main.tex
+++ b/Mini manual GitHub/main.tex
@@ -1,6 +1,11 @@
 \input{preamble.tex}
 
-\title{Mini-tutorial Primer Repositorio en GitHub}
+\title{
+	\begin{tabular}{cc}
+		Mini-tutorial Primer repositorio en GitHub & 
+		\includegraphics[width=15px]{GitHub-Mark-120px-plus.png}
+	\end{tabular}
+}
 \author{Porfirio Damián Escamilla Huerta}
 \date{Agosto 2022}
 
@@ -9,9 +14,6 @@
 \begin{document}
 	
 	\maketitle
-	\begin{center}
-		\includegraphics[width=120px]{GitHub-Mark-120px-plus.png}
-	\end{center}
 	\newpage
 	
 	\input{CrearRepo.tex}
