Actualización mini manual git (pull)

--- a/Mini manual GitHub/AgregarARepositorio.tex
+++ b/Mini manual GitHub/AgregarARepositorio.tex
@@ -2,7 +2,7 @@
 	\begin{itemize}
 		\item[\textbf{\texttt{1.-}}] Abrir una terminal.
 		\item[\textbf{\texttt{2.-}}] Dirigirse a la carpeta del repositorio.
-		\item[\textbf{\texttt{3.-}}] Para agregar archivos al repositorio, deben estar en la misma carpeta, luego ingresamos el siguiente comando
+		\item[\textbf{\texttt{3.-}}] Para agregar archivos al repositorio, deben estar en la misma carpeta (repositorio), luego ingresamos el siguiente comando
 		\begin{lstlisting}[language=bash, caption= Ejemplo. Agregar un archivo]
 $ git add nombreDelArchivo.extension\end{lstlisting}
 		o si se desean agregar todos los archivos
