--- a/Mini manual GitHub/main.tex
+++ b/Mini manual GitHub/main.tex
@@ -21,5 +21,6 @@
 	\input{ClonarRepo.tex}
 	\input{GenerarToken.tex}
 	\input{AgregarARepositorio.tex}
+	\input{ActualizarPull.tex}
 	
 \end{document}
