Actualización mini manual git

--- a/Mini manual GitHub/main.tex
+++ b/Mini manual GitHub/main.tex
@@ -2,7 +2,7 @@
 
 \title{
 	\begin{tabular}{cc}
-		Mini-tutorial Primer repositorio en GitHub & 
+		Mini-manual de GitHub & 
 		\includegraphics[width=15px]{GitHub-Mark-120px-plus.png}
 	\end{tabular}
 }
@@ -16,6 +16,7 @@
 	\maketitle
 	\newpage
 	
+	\input{CrearCuentaGit.tex}
 	\input{CrearRepo.tex}
 	\input{ConfigurarGit.tex}
 	\input{ClonarRepo.tex}
